learning/kubernetes/cert-manager/greeting-ingress-ngrok.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeting-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        -  26b4-143-105-152-65.ngrok-free.app
      secretName: echo-tls
  rules:
    - host: 26b4-143-105-152-65.ngrok-free.app
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 5678
          - path: /welcome
            pathType: Prefix
            backend:
              service:
                name: welcome-service
                port:
                  number: 5678
