learning/kubernetes/cert-manager/greeting-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greeting-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
  - http:
      paths:
        - path: /hello
          backend:
            serviceName: hello-service
            servicePort: 5678
        - path: /welcome
          backend:
            serviceName: welcome-service
            servicePort: 5678
