learning/kubernetes/cert-manager/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - 877b-143-105-152-61.ngrok-free.app
    secretName: hello-world-tls
  rules:
  - host: 877b-143-105-152-61.ngrok-free.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
